@@ -4,6 +4,7 @@ unity (7.4.5+16.04.20171201.3ubuntu1) UNRELEASED; urgency=medium
     signals (LP: #1748330) (LP: #1748330)
   * CairoBaseWindow: don't try to compute the blur of an invalid texture
     (LP: #1290056)
+  * Unity: use new definition of infinite CompRegion's
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Mon, 19 Feb 2018 15:41:34 +0100
 
